# benchmarks

./: .clang-format
CEED/BP5/: .gitignore  CMakeLists.txt  README.md  bp5.sh  zwgll.txt
CEED/BP5/backends/: bp5-backend-cuda.c  bp5-backend-cuda.cu  bp5-backend-dummy.c  bp5-backend-hip.c  bp5-backend-nomp.c  bp5-backend-opencl.c  bp5-backend-register.c  bp5-backend-unified-cuda-hip.h  bp5-backend.c  bp5.py
CEED/BP5/cmake/: FindHIP.cmake
CEED/BP5/include/: bp5-backend-list.h  bp5-backend.h  bp5-defs.h.in  bp5-impl.h  bp5-types.h  bp5.h
CEED/BP5/src/: bp5-backend.c  bp5-gs.c  bp5-impl.c  bp5-impl.h  bp5-setup.c  bp5-types.h  bp5.c  bp5.h
nekbone/: .gitignore  CMakeLists.txt  README.md  nekbone.sh
nekbone/backends/: nekbone-backend-cuda.cu  nekbone-backend-dummy.c  nekbone-backend-hip.c  nekbone-backend-hiprtc.c  nekbone-backend-nomp.c  nekbone-backend-occa.cpp  nekbone-backend-omp-ax.h  nekbone-backend-omp.c  nekbone-backend-opencl.c  nekbone-backend-sycl.cpp  nekbone-backend-unified-cuda-hip-ax.h  nekbone-backend-unified-cuda-hip.h  nekbone.okl  nekbone.py
nekbone/include/: nekbone-backend-list.h  nekbone-backend.h  nekbone-defs.h.in  nekbone-impl.h  nekbone-types.h  nekbone.h
nekbone/scrips/: frontier.sh
nekbone/scripts/: aurora.sh  frontier.sh  local.sh  polaris.sh
nekbone/src/: nekbone-api.c  nekbone-backend.c  nekbone-impl.c  nekbone-setup.c
